# glissade

./: .gitignore  LIESMICH.md  NOTES.md  Pipfile  README.md  dump.txt  gensprites.py  gensprites_2d.py  levels.json  solve.py  solver.js  sprites.yaml
_bin/: convert-audio.sh  convert-images.sh  deploy.sh  pack.sh
_raw/: chilly.afphoto  ice.afphoto
solver/: CMakeLists.txt  NOTES.md
solver/src/: chilly.cpp  chilly.hpp  solver-main.cpp
src/: .gitignore  chilly.js  editor.html  editor.js  graph.js  index.html  index.js  levels.json  queue.js  rc4.js  tiles.css
src/static/: levels.json
src/static/js/: bezier.js
